# Capstone2_2019Fall

code/team A/CNN codes/: CNN_Accuracy_test.ipynb  Testing_transfer_learning_tutorial.ipynb
code/team A/DQN_codes_for_submission/: DuelingDDQN_learnfortest.py  DuelingDDQN_learnfortest_pre.py  Network_test.py  README.md  README_guide.md  dqn_model.py  main_DuelingDDQN.py  main_DuelingDDQN_pre.py  map_gen.yaml  simulatorforNetwork_test.py  simulatorfortest.py
code/team A/DQN_codes_for_submission/utils/: PrDbNs_replay_bufferfortest.py  Rainbow_replay_buffer.py
code/team A/LabVIEW codes/: Controller Output.vi  IO Value.lvlib  UI control variable.lvlib  YSH_XBOX360_joystick.ctl  changsigoo.aliases  changsigoo.lvlps  changsigoo.lvproj  control.vi  input (SubVI).vi
code/team A/LabVIEW codes/Dynamixel Motor/: Dynamixel Motor Readme.html  Dynamixel Motor.aliases  Dynamixel Motor.lvlib  Dynamixel Motor.lvlps  Dynamixel Motor.lvproj
code/team A/ROS_src_files/ball_detection/: CMakeLists.txt
code/team A/ROS_src_files/find_frontier/: CMakeLists.txt
code/team A/ROS_src_files/find_frontier/config/: costmap_common.yaml  costmap_local.yaml  planner.yaml
code/team A/ROS_src_files/find_frontier/launch/: hector_mapping.launch  move_base.launch  nav_run.launch
code/team A/ROS_src_files/find_frontier/src/: find_frontier.cpp
code/team C/src/cmd_sub/: CMakeLists.txt  Material_cmd_sub.pptx  package.xml
code/team C/src/cmd_sub/launch/: cmd_sub_run.launch  cnn_launch.launch  dqn_launch.launch  final.launch  integrated_launch.launch  mapping_slam.launch  pick_test.launch  sensor_launch.launch
code/team C/src/cmd_sub/src/: ball_count.cpp  cmd_sub.cpp  kbhit.h
code/team D/src/core_msgs/: CMakeLists.txt  package.xml
code/team D/src/core_msgs/msg/: ball_bottom.msg  ball_position.msg  goal_sw.msg  mark.msg
(+277 files in other folders)
